[gd_scene load_steps=6 format=3 uid="uid://di8w1a601aass"]

[ext_resource type="Script" path="res://World/levelsmenu.gd" id="1_cynw2"]
[ext_resource type="Theme" uid="uid://d31rns0bis8jm" path="res://Menu_Theme.tres" id="1_nrrgv"]
[ext_resource type="PackedScene" uid="uid://dwd8ry3kcc7gm" path="res://Projectiles/bubble_particles.tscn" id="2_sjy2v"]
[ext_resource type="Theme" uid="uid://q2pxe47w6snq" path="res://MainMenu.tres" id="4_lar54"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x828l"]

[node name="menu" type="CanvasLayer"]
script = ExtResource("1_cynw2")

[node name="Panel" type="Panel" parent="."]
offset_right = 1000.0
offset_bottom = 720.0
theme = ExtResource("1_nrrgv")
theme_override_styles/panel = SubResource("StyleBoxEmpty_x828l")

[node name="BubbleParticles" parent="Panel" instance=ExtResource("2_sjy2v")]
texture_filter = 1
position = Vector2(500, 800)
amount = 8
lifetime = 8.0
randomness = 0.0
lifetime_randomness = 0.0
emission_rect_extents = Vector2(500, 4)
spread = 3.0
gravity = Vector2(0, -10)
initial_velocity_min = 200.0
initial_velocity_max = 220.0
angular_velocity_min = 5.0
linear_accel_min = 0.0
angle_min = -180.0
angle_max = 180.0
color_ramp = null

[node name="Title" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 40.0
offset_top = 80.0
offset_right = 968.0
offset_bottom = 386.0
size_flags_vertical = 0
size_flags_stretch_ratio = 2.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/normal_font_size = 128
bbcode_enabled = true
text = "[center][color=yellow]Welcome to[/color] 
[center][color=dark_red]Acid[/color] [color=deepskyblue]Base[/color][/center]
[center]Game "

[node name="PanelContainer" type="PanelContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.771
offset_top = -80.0
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("4_lar54")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Level1" type="Button" parent="Panel/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Level -1 "

[node name="Level2" type="Button" parent="Panel/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Level -2 "

[node name="Level3" type="Button" parent="Panel/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Level -3 "

[node name="Level4" type="Button" parent="Panel/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Level -4 "

[node name="Tutorial" type="Button" parent="Panel/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Rules to Play"

[node name="Exit" type="Button" parent="Panel/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Exit
"

[connection signal="pressed" from="Panel/PanelContainer/VBoxContainer/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Panel/PanelContainer/VBoxContainer/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Panel/PanelContainer/VBoxContainer/Level3" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Panel/PanelContainer/VBoxContainer/Level4" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Panel/PanelContainer/VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="Panel/PanelContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
